# Snakes

./: README.md
C/: CMakeLists.txt  CMakePresets.json
C/include/: constans.h  logic.h  render.h  snake.h
C/src/: logic.c  main.c  render.c
C/test/: testSnake.c
